Por fin esta todo el responsive el que lo dañe lo organiza :D

--- a/source/app/ambiental/ambiental.html
+++ b/source/app/ambiental/ambiental.html
@@ -4,8 +4,8 @@
     </h1>
     <h4 class="Descriccion-page">
         En este espacio te diremos nuestras propuestas para mejorar el medio ambiente
-        desde tu casa y/o oficina, Y esperamos incentivarte a ayudar no solo a nosotros,
-        Si no a todo el planeta.
+        desde tu casa y/o oficina. Y esperamos incentivarte a ayudar no solo a nosotros,
+        sino a todo el planeta.
     </h4>
     <div class="Div-3r">
         <h2 class="Titulo-3r">
@@ -16,7 +16,7 @@
           Esta regla sirve para tener un mundo sano y limpio sin embargo algunas personas no la respetan por que dicen
           "ay… que tanto es tirar basura en la calle" o "yo no reciclo, pero otras personas si" en realidad todos deberían decir:
           "hay que recoger la basura y a reciclarla" o "hay que reciclar la basura para tener un planeta más limpio o simplemente:
-          "<strong>¡cuida el planeta!.</strong>"
+          "<strong>¡Cuida el planeta!.</strong>"
         </p>
         <figure class="Image3r-container">
         <img class="Image3r" src="../../img/3r.png" width="300" height="150"/>
@@ -24,11 +24,11 @@
     </div>
     <aside class="Video3r-container">
       <h2 class="TituloVideo-3r">
-          Como aplicar las 3R?
+          ¿Como aplicar las 3R?
         </h2>
         <iframe width="500" height="400" src="https://www.youtube.com/embed/wi2PaIbliE8" frameborder="0" class="VIdeo3r"></iframe>
     </aside>
-    <div class="Div-3r">
+    <!-- <div class="Div-3r">
         <h2 class="Titulo-3r">
           Ahorro De Agua
         </h2>
@@ -41,8 +41,8 @@
           <figure class="Image3r-container img">
             <img class="Image3r" src="../../img/ahorro-de-agua.jpg" width="300" height="200"/>
           </figure>
-      </div>
-      <aside class="Video3r-container">
+      </div> -->
+      <!-- <aside class="Video3r-container">
       <h2 class="TituloVideo-3r">
             !Ayudar Al Planeta Ahorrardo Agua¡
       </h2>
@@ -89,7 +89,7 @@
             Como Lo Hago?
           </h2>
           <iframe width="500" height="400" src="https://www.youtube.com/embed/m91pIZZm5q0" frameborder="0" class="VIdeo3r"></iframe>
-      </aside>
+      </aside> -->
         <div class="Div-3r">
             <h2 class="Titulo-3r">
               Manejo De Residuos
@@ -133,6 +133,9 @@
                 </p>
                 <p class="Info-3r">
                     <strong>6.</strong> Localiza centros de acopio que compren materiales reciclables.
+                </p>
+                <p class="Info-3r">
+                    <strong>7.</strong> Para los residuos infecciosos o de riesgo biologico estos deben ir en una bolsa plastica de color rojo, en los puntos ecologicos estos van en la caneca del mismo color y se clasifican en: hospitalarios, sanitarios y quimicos tales como medicamentos.
                 </p>
             </div>
 </section>
