--- a/source/app/bienvenido/bienvenido.html
+++ b/source/app/bienvenido/bienvenido.html
@@ -2,23 +2,23 @@
   <!-- <aside class="heal">
     <img class="care1" src="../../img/angelica.jpg" alt="" />
   </aside> -->
-  <div class="container" style="display:inline-block;margin-left:3em;">
+  <div class="container">
     <div class="row">
       <div class="col-xs-12">
-        <h2 class="sectionTitle">¡Bienvenidos a Pocket Medic!</h2>
+        <h1 class="page-header sectionTitle">¡Bienvenidos a Pocket Medic!</h1>
       </div>
     </div>
-    <div class="Portafolio">
+    <!-- <div class="Portafolio"> -->
       <div class="row">
-        <div class="col-md-4 portafoliocontainer">
+        <div class="col-md-6 WelcomePortafoliocontainer">
           <h3 class="portafoliocontainer-Title">Bienvenido</h3>
           <p class="text">Ahora puedes disfrutar de los servicios que te ofrecemos en nuestra plataforma</p>
         </div>
-        <div class="col-md-4 portafoliocontainer">
+        <div class="col-md-6 WelcomePortafoliocontainer">
           <h3 class="portafoliocontainer-Title">¿Qué puedes hacer ahora?</h3>
           <p class="text">Ahora que estás dentro puedes buscar médicos según su especialidad, crear consultas con ellos y muy pronto podrás crear una cita presencial con tu médico de seleccionado</p>
         </div>
       </div>
-    </div>
+    <!-- </div> -->
   </div>
 </div>
