--- a/source/app/recuperarcontraseña/nuevacontraseña/nuevacontraseña.html
+++ b/source/app/recuperarcontraseña/nuevacontraseña/nuevacontraseña.html
@@ -1,4 +1,4 @@
-<div class="container-login" style=" background: #f1f1f1;">
+<div class="container-login" style=" background: white;">
 
             <div class="login-form-recuperar">
               <div class="loginform-recuperar">
