--- a/source/app/calendario/calendario.html
+++ b/source/app/calendario/calendario.html
@@ -1,11 +1,7 @@
-<div class="container-footer">
+<div class="container-footer" style="margin-top:7em;">
     <h2 class="title-h2">Centro De Biotecnologia Industrial</h2>
     <article class="Calendar-AutoComplete">
-<<<<<<< HEAD
 
-=======
-      
->>>>>>> 6b116762c2841c8a9bc08908365259e0942ec5fd
 
   <div class="Calendar" ui-calendar='vm.uiConfig.calendar' ng-model='vm.eventSources'></div>
 
