--- a/source/app/configuracion/configuracion.html
+++ b/source/app/configuracion/configuracion.html
@@ -1,11 +1,14 @@
 <section class="SectionPerfilC" style="text-align:centrer;">
   <article class="FormPerfil" style="display:block;">
-
     <h1 class="ConfiC" >Configuración</h1>
+       <figure class="FormPerfil-imgC">
+        <div class="photo">
+          <img ng-if="vm.usuario.avatar" ng-src="{{'data:image/png;base64,' + vm.usuario.avatar}}" width="150px" height="150px" style="border-radius: 51%;"/>
+           <button class="boton"><label style="color:white;" for="foto-input">Subir Foto</label></button>
+             <input type="file" id="foto-input" on-read-img="vm.loadFoto($fileContent)">
+        </div>
+      </figure>
 
-     <figure class="FormPerfil-imgC"  >
-       <img class="messegerC" src="../../img/messenger.jpg" style="width:100%"/>
-     </figure>
 
   <form class="usuarioPerfilC" name="formConfig">
     <div class="infoPersonalC">
@@ -54,7 +57,7 @@
     <p>Tenga presente que si usted deshabilita su cuenta, esta quedara inactiva hasta que vuelva a iniciar sesión con ella</p>
     <!-- <md-button class="md-raised md-primary" style="padding:0 10em;">Inhabilitar</md-button> -->
     <!-- <md-checkbox  style="color:#0000;font-weight:bold;" class="md-primary" name="TerminosCondiciones" id="chekched" ng-model="vm.usuario.estado" >Inhabilitar Mi Cuenta</md-checkbox>
-  </section> --> 
+  </section> -->
     </div>
     <section layout="row" layout-sm="column" layout-align="center center" layout-wrap>
 
