responsive pagina ambiental

--- a/source/app/ambiental/ambiental.html
+++ b/source/app/ambiental/ambiental.html
@@ -1,16 +1,20 @@
 <section class="Section-3r">
+  <div class="TitleMain-container">
     <h1 class="Titulo-page">
         Pocket Medic Ecologico
     </h1>
-    <h4 class="Descriccion-page">
+  </div>
+    <p class="Descriccion-page">
         En este espacio te diremos nuestras propuestas para mejorar el medio ambiente
         desde tu casa y/o oficina. Y esperamos incentivarte a ayudar no solo a nosotros,
         sino a todo el planeta.
-    </h4>
+    </p>
     <div class="Div-3r">
+      <div class="SubTitles-container">
         <h2 class="Titulo-3r">
             Las 3R
         </h2>
+      </div>
         <p class="Info-3r">
           Esta regla está formada por: reducir, reutilizar y reciclar.
           Esta regla sirve para tener un mundo sano y limpio sin embargo algunas personas no la respetan por que dicen
@@ -19,7 +23,7 @@
           "<strong>¡Cuida el planeta!.</strong>"
         </p>
         <figure class="Image3r-container">
-        <img class="Image3r" src="../../img/3r.png" width="300" height="150"/>
+        <img class="Image3r img-responsive" src="../../img/3r.png" width="300" height="150"/>
         </figure>
     </div>
     <aside class="Video3r-container">
@@ -28,72 +32,14 @@
         </h2>
         <iframe width="500" height="400" src="https://www.youtube.com/embed/wi2PaIbliE8" frameborder="0" class="VIdeo3r"></iframe>
     </aside>
-    <!-- <div class="Div-3r">
-        <h2 class="Titulo-3r">
-          Ahorro De Agua
-        </h2>
-          <p class="Info-3r">
-            El agua es uno de los bienes más preciados del planeta, por eso cuidarla se ha convertido en un deber de todos nosotros.
-            El agua potable, proveniente de ríos, lagos o del agua subterránea, se encuentra repartida de forma desigual,
-            estando la mitad de la población mundial sin acceso a ella. Mientras que en aquellos lugares donde se la tiene con facilidad,
-            por lo general se malgasta
-          </p>
-          <figure class="Image3r-container img">
-            <img class="Image3r" src="../../img/ahorro-de-agua.jpg" width="300" height="200"/>
-          </figure>
-      </div> -->
-      <!-- <aside class="Video3r-container">
-      <h2 class="TituloVideo-3r">
-            !Ayudar Al Planeta Ahorrardo Agua¡
-      </h2>
-      <iframe width="500" height="400" src="https://www.youtube.com/embed/1nk5obhE_E0" frameborder="0" class="VIdeo3r"></iframe>
-    </aside>
-    <div class="Div-ecoTips">
-        <h2 class="Titulo-V">
-          !Ecotips Para El Ahorro De Agua¡
-        </h2>
-          <p class="Info-3r">
-            <strong>1.</strong> Repare cualquier grifo que gotee y asegúrese de cerrar bien las llaves.
-          </p>
-          <p class="Info-3r">
-            <strong>2.</strong> Riegue con agua lluvia su jardín. Hágalo una vez por semana.
-          </p>
-          <p class="Info-3r">
-            <strong>3.</strong> Opte por el lavado ecológico para su vehículo,
-                                que se puede realizar con productos que ofrece el mercado para limpiar y brillar el carro,
-                                sin usar una gota de agua. También puede prescindir de la manguera y usar un balde con agua.
-          </p>
-          <p class="Info-3r">
-            <strong>4.</strong> Cierre la llave del lavamanos mientras se cepilla los dientes o se baña su rostro.
-          </p>
-          <p class="Info-3r">
-            <strong>5.</strong> Lave las frutas y las verduras en un recipiente con agua y no las limpie bajo el grifo.
-          </p>
-          <p class="Info-3r">
-            <strong>6.</strong> No deje correr el agua mientras lava los platos
-          </p>
-    </div>
-      <div class="Div-3r">
-          <h2 class="Titulo-3r">
-            Diminuir El uso De papel
-          </h2>
-          <p class="Info-3r">
-                            El agua es uno de los bienes más preciados del planeta, por eso cuidarla se ha convertido en un deber de todos nosotros.
-                            El agua potable, proveniente de ríos, lagos o del agua subterránea, se encuentra repartida de forma desigual,
-                            estando la mitad de la población mundial sin acceso a ella. Mientras que en aquellos lugares donde se la tiene con facilidad,
-                            por lo general se malgasta
-          </p>
-      </div>
-      <aside class="Video3r-container">
-          <h2 class="TituloVideo-3r">
-            Como Lo Hago?
-          </h2>
-          <iframe width="500" height="400" src="https://www.youtube.com/embed/m91pIZZm5q0" frameborder="0" class="VIdeo3r"></iframe>
-      </aside> -->
+
+
         <div class="Div-3r">
+          <div class="SubTitles-container">
             <h2 class="Titulo-3r">
               Manejo De Residuos
             </h2>
+          </div>
             <p class="Info-3r">
                             La temática “manejo adecuado de residuos sólidos y procesos de reciclaje”
                             busca generar una conciencia de reducción y consumo responsable, mostrando que la elevada generación de residuos sólidos,
@@ -102,7 +48,7 @@
                             mostrando algunas alternativas y usos que se pueden dar a materiales que comúnmente son desechados como “basura”.
             </p>
               <figure class="Image3r-container">
-                <img class="Image3r" src="../../img/grandes.jpg" width="300" height="150"/>
+                <img class="Image3r img-responsive" src="../../img/grandes.jpg" width="300" height="150"/>
               </figure>
             </div>
             <aside class="Video3r-container">
