--- a/source/index.html
+++ b/source/index.html
@@ -17,25 +17,26 @@
     <!-- inject:css -->
     <link rel="stylesheet" href="/app/admin/admin.css">
     <link rel="stylesheet" href="/app/ambiental/ambiental.css">
-    <link rel="stylesheet" href="/app/bienvenido/estilos.css">
     <link rel="stylesheet" href="/app/configuracion/configuracion.css">
-    <link rel="stylesheet" href="/app/footer/footer.css">
+    <link rel="stylesheet" href="/app/bienvenido/estilos.css">
     <link rel="stylesheet" href="/app/header/estilos.css">
     <link rel="stylesheet" href="/app/header/header.css">
-    <link rel="stylesheet" href="/app/inicio/animations.css">
-    <link rel="stylesheet" href="/app/inicio/inicio.css">
     <link rel="stylesheet" href="/app/login/estilos.css">
     <link rel="stylesheet" href="/app/perfil/perfil.css">
     <link rel="stylesheet" href="/app/portafolio/portafolio.css">
     <link rel="stylesheet" href="/app/recuperarcontraseña/recuperarcontraseña.css">
     <link rel="stylesheet" href="/app/registro/estilos.css">
+    <link rel="stylesheet" href="/app/inicio/animations.css">
+    <link rel="stylesheet" href="/app/inicio/inicio.css">
+    <link rel="stylesheet" href="/app/footer/footer.css">
+    <link rel="stylesheet" href="/app/Usuarios/citasmedicas/cita.css">
     <link rel="stylesheet" href="/app/consultas/consulta-create/consulta.css">
     <link rel="stylesheet" href="/app/consultas/consultaadmin/estilos.css">
+    <link rel="stylesheet" href="/app/consultas/consultaadminmedic/estilos.css">
     <link rel="stylesheet" href="/app/consultas/consultasList/estilos.css">
     <link rel="stylesheet" href="/app/recuperarcontraseña/nuevacontraseña/nuevacontraseña.css">
-    <link rel="stylesheet" href="/app/Usuarios/citasmedicas/cita.css">
-    <link rel="stylesheet" href="/app/Usuarios/usuariosList/estilos.css">
     <link rel="stylesheet" href="/app/Usuarios/eliminarcuenta/estilos.css">
+    <link rel="stylesheet" href="/app/Usuarios/usuariosList/estilos.css">
     <link rel="stylesheet" href="/app/Usuarios/citasmedicas/create/citacreate.css">
     <!-- endinject -->
     <!-- endbuild -->
@@ -83,6 +84,7 @@
     <!-- inject:js -->
     <script src="/app/app.module.js"></script>
     <script src="/app/templates.js"></script>
+    <script src="/app/Usuarios/app.module.js"></script>
     <script src="/app/admin/app.controller.js"></script>
     <script src="/app/admin/app.directivas.js"></script>
     <script src="/app/admin/app.module.js"></script>
@@ -91,9 +93,6 @@
     <script src="/app/ambiental/app.directivas.js"></script>
     <script src="/app/ambiental/app.module.js"></script>
     <script src="/app/ambiental/app.route.js"></script>
-    <script src="/app/bienvenido/app.directive.js"></script>
-    <script src="/app/bienvenido/app.module.js"></script>
-    <script src="/app/bienvenido/app.route.js"></script>
     <script src="/app/calendario/app.controller.js"></script>
     <script src="/app/calendario/app.directivas.js"></script>
     <script src="/app/calendario/app.module.js"></script>
@@ -107,8 +106,9 @@
     <script src="/app/consultas/app.services.js"></script>
     <script src="/app/email/app.module.js"></script>
     <script src="/app/email/app.services.js"></script>
-    <script src="/app/footer/app.directivas.js"></script>
-    <script src="/app/footer/app.module.js"></script>
+    <script src="/app/bienvenido/app.directive.js"></script>
+    <script src="/app/bienvenido/app.module.js"></script>
+    <script src="/app/bienvenido/app.route.js"></script>
     <script src="/app/header/app.controller.js"></script>
     <script src="/app/header/app.directive.js"></script>
     <script src="/app/header/app.module.js"></script>
@@ -116,11 +116,6 @@
     <script src="/app/header/mostrardesplegable.js"></script>
     <script src="/app/header/notificacion.js"></script>
     <script src="/app/header/showpanels.js"></script>
-    <script src="/app/inicio/animation.js"></script>
-    <script src="/app/inicio/app.controller.js"></script>
-    <script src="/app/inicio/app.directivas.js"></script>
-    <script src="/app/inicio/app.module.js"></script>
-    <script src="/app/inicio/app.route.js"></script>
     <script src="/app/login/app.controller.js"></script>
     <script src="/app/login/app.directive.js"></script>
     <script src="/app/login/app.module.js"></script>
@@ -142,9 +137,21 @@
     <script src="/app/registro/app.module.js"></script>
     <script src="/app/registro/app.route.js"></script>
     <script src="/app/registro/app.services.js"></script>
+    <script src="/app/inicio/animation.js"></script>
+    <script src="/app/inicio/app.controller.js"></script>
+    <script src="/app/inicio/app.directivas.js"></script>
+    <script src="/app/inicio/app.module.js"></script>
+    <script src="/app/inicio/app.route.js"></script>
     <script src="/app/tituloscertificados/app.module.js"></script>
     <script src="/app/tituloscertificados/app.services.js"></script>
-    <script src="/app/Usuarios/app.module.js"></script>
+    <script src="/app/footer/app.directivas.js"></script>
+    <script src="/app/footer/app.module.js"></script>
+    <script src="/app/respuestas/app.module.js"></script>
+    <script src="/app/respuestas/app.services.js"></script>
+    <script src="/app/Usuarios/citasmedicas/app.controller.js"></script>
+    <script src="/app/Usuarios/citasmedicas/app.directive.js"></script>
+    <script src="/app/Usuarios/citasmedicas/app.module.js"></script>
+    <script src="/app/Usuarios/citasmedicas/app.route.js"></script>
     <script src="/app/consultas/consulta-create/app.controller.js"></script>
     <script src="/app/consultas/consulta-create/app.directive.js"></script>
     <script src="/app/consultas/consulta-create/app.module.js"></script>
@@ -153,6 +160,10 @@
     <script src="/app/consultas/consultaadmin/app.directive.js"></script>
     <script src="/app/consultas/consultaadmin/app.module.js"></script>
     <script src="/app/consultas/consultaadmin/app.route.js"></script>
+    <script src="/app/consultas/consultaadminmedic/app.controller.js"></script>
+    <script src="/app/consultas/consultaadminmedic/app.directive.js"></script>
+    <script src="/app/consultas/consultaadminmedic/app.module.js"></script>
+    <script src="/app/consultas/consultaadminmedic/app.route.js"></script>
     <script src="/app/consultas/consultasList/app.controller.js"></script>
     <script src="/app/consultas/consultasList/app.directive.js"></script>
     <script src="/app/consultas/consultasList/app.module.js"></script>
@@ -160,19 +171,15 @@
     <script src="/app/recuperarcontraseña/nuevacontraseña/app.directivas.js"></script>
     <script src="/app/recuperarcontraseña/nuevacontraseña/app.module.js"></script>
     <script src="/app/recuperarcontraseña/nuevacontraseña/app.router.js"></script>
-    <script src="/app/Usuarios/citasmedicas/app.controller.js"></script>
-    <script src="/app/Usuarios/citasmedicas/app.directive.js"></script>
-    <script src="/app/Usuarios/citasmedicas/app.module.js"></script>
-    <script src="/app/Usuarios/citasmedicas/app.route.js"></script>
+    <script src="/app/Usuarios/eliminarcuenta/app.controller.js"></script>
+    <script src="/app/Usuarios/eliminarcuenta/app.directive.js"></script>
+    <script src="/app/Usuarios/eliminarcuenta/app.module.js"></script>
+    <script src="/app/Usuarios/eliminarcuenta/app.route.js"></script>
     <script src="/app/Usuarios/usuariosList/app.controller.js"></script>
     <script src="/app/Usuarios/usuariosList/app.directive.js"></script>
     <script src="/app/Usuarios/usuariosList/app.module.js"></script>
     <script src="/app/Usuarios/usuariosList/app.route.js"></script>
     <script src="/app/Usuarios/usuariosList/app.services.js"></script>
-    <script src="/app/Usuarios/eliminarcuenta/app.controller.js"></script>
-    <script src="/app/Usuarios/eliminarcuenta/app.directive.js"></script>
-    <script src="/app/Usuarios/eliminarcuenta/app.module.js"></script>
-    <script src="/app/Usuarios/eliminarcuenta/app.route.js"></script>
     <script src="/app/Usuarios/citasmedicas/create/app.controller.js"></script>
     <script src="/app/Usuarios/citasmedicas/create/app.directive.js"></script>
     <script src="/app/Usuarios/citasmedicas/create/app.module.js"></script>
