--- a/source/app/consultas/consultaadminmedic/consultaadmin.html
+++ b/source/app/consultas/consultaadminmedic/consultaadmin.html
@@ -34,8 +34,8 @@
         <textarea  ng-model="vm.respuestas.descripcion">Mi Respuesta</textarea>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary" data-dismiss="modal" ng-click="vm.createRespuesta()">Save changes</button>
+        <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
+        <button type="button" class="btn btn-primary" data-dismiss="modal" ng-click="vm.createRespuesta()">Enviar Respuesta</button>
       </div>
     </div>
   </div>
